@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Formatters can pick buffered subtest behavior
+
 0.000038  2016-04-03 15:41:39-07:00 America/Los_Angeles
 
     - Add summary() method to event base class
